tests/ui/cve_2020_35888/cve_2020_35888.stderr
error: dropped an possibly-uninitialized value
  --> tests/ui/cve_2020_35888/cve_2020_35888.rs:18:17
   |
LL |         let ptr = unsafe { alloc(layout) as *mut T };
   |                            ------------- memory allocated here
...
LL |                 (*(ptr.wrapping_offset(i as isize))) = template.clone();
   |                 ^^^^^^^---------------------------^^
   |                 |      |
   |                 |      a maybe-relative pointer created here
   |                 original value is dropped here
   |                 the new value is assigned to here
   |
   = help: assigning to a dereferenced pointer will cause previous value to be dropped, and try using `ptr::write` instead
   = note: `#[deny(rpl::drop_uninit_value)]` on by default

error: aborting due to 1 previous error

